<resources>
    <string name="app_name">Pricey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pricey</string>
    <string name="nav_header_subtitle" translatable="false">v.0.2.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Prices</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy">Privacy</string>


    <string name="updating">Updating the list of the products, please wait..</string>
    <string name="select_product">Select a product on the \'Products\' tab</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <!--<string name="messages_header" translatable="false">Messages</string>-->
    <string name="sync_header">Sync</string>
    <string name="personal_header">Personal</string>

    <!-- Messages Preferences -->
    <!--<string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>-->

    <!-- Sync Preferences -->
    <!--<string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>-->

    <string name="updated_title">Last updated</string>
    <string name="refresh_title">Refresh</string>

    <string name="id_title">Id</string>
    <string name="country_title">Country</string>


    <string name="nazwa">Name</string>
    <string name="produkt">Item</string>
    <string name="sklep">Store</string>
    <string name="cena">Price</string>
    <string name="zaniechaj">Cancel</string>
    <string name="zachowaj">Save</string>
    <string name="uaktualnij">Update</string>


    <string name="share">Scan the code below using the other phone</string>
    <string-array name="share_options">
        <item>Google Play</item>
        <item>APK file</item>
    </string-array>
    <string name="googleplay_url" translatable="false">https://play.google.com/store/apps/details?id=github.wleap.pricey&amp;pcampaignid=app_share</string>
    <string name="apkfile_url" translatable="false">https://github.com/wojtekl/google-play/raw/main/pricey/Pricey/app/release/app-release.apk</string>
    <string name="see_more">See more</string>
    <string name="apps_url" translatable="false">https://play.google.com/store/apps/dev?id=5731012165048810814</string>

    <string name="privacy_policy_url" translatable="false">https://raw.githubusercontent.com/wojtekl/google-play/main/pricey/privacy-policy</string>

    <string name="middlepart_url" translatable="false">https://raw.githubusercontent.com/wojtekl/google-play/main/shoppinglist/adres.txt</string>

    <string name="ad_app_id" translatable="false">ca-app-pub-4377490341302105~4150224597</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/3011514674</string>
    <string name="app_open_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/9589092399</string>
</resources>