<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sharp_receipt_24"
            android:title="@string/menu_home" />

        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/sharp_price_change_24"
            android:title="@string/menu_gallery" />-->
        
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/sharp_qr_code_2_24"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/sharp_privacy_tip_24"
            android:title="@string/menu_privacy" />
    </group>
</menu>